--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <div class="fullscreen-bg"> -->
     <div class="VidOverlay">
     </div>
-      <video autoplay muted loop class="videoSection" id="video">
+      <video autoplay loop class="videoSection" id="video">
         <source src="skillibeng.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
       </video>
